# Code-Safe

./: .gitignore  README.md  README_GUI.md  __main__.py  build_gui.py  codesafe_results.json  gui.py  pyproject.toml  requirements-gui.txt  run_gui.py  test_imports.py
codesafe/: scanner.py
codesafe/checks/: entropy.py  env_keys.py  patterns.py
