[project]
name = "codesafe"
version = "0.1.0"
description = "A Python-based secret scanner for developers"
authors = [{name = "Keaton Nordby"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorama",
    "PySide6>=6.5.0",
    "PyInstaller>=5.13.0"
]

[project.scripts]
codesafe = "codesafe.scanner:main"
